--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bot</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <h1>Woo , You see me</h1>
+    <script src="chat.js"></script>
 </body>
 </html>
