--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -17,7 +17,7 @@
                 <l1><a href="#Home">Home</a></l1>
                 <l1><a href="#vision">Our Vision</a></l1>
                 <l1><a href="#Form">Contact Us</a></l1>
-                <l1><a href="">Chat</a></l1>
+                <l1><a target="_blank" href="http://localhost:4000/">Chat</a></l1>
             </ul>
         </div>
     </div>
@@ -56,20 +56,24 @@
                 <input type="text" required>
             </div>
             <div class="ce">
-                <label for="">First Name</label>
+                <label for="">Last Name</label>
                 <input type="text" required>
             </div>
             <div class="ce">
-                <label for="">First Name</label>
-                <input type="text" required>
+                <label for="">Email</label>
+                <input type="email" required>
             </div>
             <div class="ce">
-                <label for="">First Name</label>
+                <label for="">Description</label>
                 <textarea name="" id="" cols="40" rows="10"></textarea>
             </div>
+          <span>  <button>Send</button></span>
             </form>
         </div>
     </div>
+    <footer>
+        <h3>Copyright 2022@ All Right Reserved by Code-crasher</h3>
+    </footer>
 </body>
 <script src="app.js"></script>
 </html>
