Contact us ui fixed

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
+    <div class="bodyx">
+    <h2 class="main">Contact for instant help irrespective of problem</h2>
+    <marquee behavior="" direction="">An active member is there to help you out here chat and explain your problem </marquee>
     <div id="mario-chat">
         <div id="chat-window" >
             <div id="output"></div>
@@ -18,7 +21,7 @@
         <input id="message" type="text" placeholder="Message">
         <button id="send">Send</button>
     </div>
-
+</div>
     <script src="chat.js"></script>
 </body>
 </html>
